# unajma-tutorial

./: CMakeLists.txt  README.md
libs/Tucano/: BoundingBox3.cpp  BoundingBox3.hpp  CMakeLists.txt  Camera.hpp  FlyCamera.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GLTexture.hpp  Misc.cpp  Misc.hpp  README.md  Shader.hpp  TextureManager.hpp  Trackball.cpp  Trackball.hpp
src/: CMakeLists.txt
src/01_create_context/: CMakeLists.txt  main.cpp
src/02_load_shader/: CMakeLists.txt  main.cpp
src/02_load_shader/asserts/: fragment.glsl
src/03_primitives/: CMakeLists.txt  main.cpp
src/04_3D_scene_tucano/: CMakeLists.txt
src/04_3D_scene_tucano/asserts/: vertex.glsl
src/04_texture/: CMakeLists.txt  main.cpp
src/04_texture/asserts/: fragment.glsl  vertex.glsl
src/05_3D_scene_tucano/: CMakeLists.txt  main.cpp
